[tool.poetry]
name = "smac"
version = "0.1.0"
description = ""
authors = ["Jack McPherson"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
matplotlib = "^3.8.0"
numpy = { version = "^1.26.0", python = ">=3.9.0,<3.13" }
pandas = "^2.1.1"
seaborn = "^0.13.0"
yfinance = "^0.2.30"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
