[project]
name = "smac"
version = "0.1.0"
description = "A Simple Implementation of Simple Moving Average Crossover Analysis"
authors = ["Jack McPherson <jackemcpherson@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "yfinance>=0.2.54",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "shed>=2024.10.1",
]
