[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "smac"
dynamic = ["version"]
description = "A Simple Implementation of Simple Moving Average Crossover Analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Jack McPherson", email = "jackemcpherson@gmail.com"}
]
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "rich>=14.1.0",
    "seaborn>=0.13.2",
    "typer>=0.17.4",
    "yfinance>=0.2.66",
]

[project.urls]
Homepage = "https://github.com/jackemcpherson/SMAC"
Repository = "https://github.com/jackemcpherson/SMAC"
"Bug Tracker" = "https://github.com/jackemcpherson/SMAC/issues"

[project.scripts]
smac = "smac.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "D"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["yfinance", "matplotlib.*", "seaborn"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=smac --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/smac/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/smac"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "hatch>=1.6.0",
    "twine>=4.0.0",
    "pandas-stubs>=2.3.2.250827",
]

# Release management
[tool.hatch.envs.release]
dependencies = [
    "twine>=4.0.0",
    "build>=0.10.0",
]

[tool.hatch.envs.release.scripts]
build = "hatch build --clean"
publish-test = "twine upload --repository testpypi dist/*"
publish = "twine upload dist/*"
check = "twine check dist/*"
